<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:backgroundTint="@color/grey">

    <ImageView
        android:id="@+id/inputLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:outlineSpotShadowColor="@color/blue"
        android:outlineAmbientShadowColor="@color/blue"
        app:placeholderText="@string/emailHolder"
        app:placeholderTextColor="@color/hint"
        android:id="@+id/loginEmailInputLayout"
        android:hint="@string/email"
        app:helperTextTextColor="@color/blue"
        app:endIconMode="clear_text"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordInputLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailInputLayout"
        app:placeholderText="@string/passwordHolder"
        app:placeholderTextColor="@color/hint"
        app:startIconDrawable="@drawable/baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cooper"
        android:text="@string/remember"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInputLayout" />

    <TextView
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/cooper"
        android:text="@string/forgot"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInputLayout" />

    <Button
        android:id="@+id/loginAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/cooper"
        android:text="@string/loginButton"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInputLayout" />

    <LinearLayout
        android:id="@+id/forgetAccountLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInputLayout">

        <TextView
            android:id="@+id/forgetAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cooper"
            android:layout_weight="300"
            android:text="@string/noAccount" />

        <TextView
            android:id="@+id/signUpAccountClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cooper"
            android:layout_weight="900"
            android:textSize="15dp"
            android:text="@string/clickHere"
            android:layout_marginLeft="5dp"
            android:textColor="@color/lightBlue"
            android:textStyle="italic"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>