<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_host_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/forgetTextView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/cooper"
        android:text="@string/forgetPasswordText1"
        android:textAlignment="textStart"
        android:textColor="@color/blue"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgetTextView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/cooper"
        android:text="@string/forgetPasswordText2"
        android:textAlignment="textStart"
        android:textColor="@color/blue"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetTextView1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailInputLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        android:outlineAmbientShadowColor="@color/blue"
        android:outlineSpotShadowColor="@color/blue"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetTextView3"
        app:placeholderText="@string/emailHolder"
        app:placeholderTextColor="@color/hint"
        app:startIconDrawable="@drawable/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgetEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgetSendEmailButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/cooper"
        android:text="@string/sendButton"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>