<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_host_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/forgetTextView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/cooper"
        android:text="@string/receiveForgetCode"
        android:textAlignment="textStart"
        android:textColor="@color/blue"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgetCodeInputLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/white"
        android:hint="@string/code"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:errorTextColor="@color/red"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetTextView3"
        app:placeholderText="@string/codeHolder"
        app:placeholderTextColor="@color/hint"
        app:startIconDrawable="@drawable/verification"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/wrong">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgetCodeInput"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgetSendEmailButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/cooper"
        android:text="@string/sendButton"
        android:textAllCaps="true"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/forgetCodeInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/forgetCodeInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>